--- a/src/UserBundle/Resources/views/Profile/Partials/_profile-picture.html.twig
+++ b/src/UserBundle/Resources/views/Profile/Partials/_profile-picture.html.twig
@@ -1,19 +1,23 @@
+<style>
+    img
+</style>
+
 <div class="card small" id="profile-left-box" style="background-color: #F8F8F8;color: #5E5E5E;">
-    <div class="card-image card-image-profile">
+    <div class="card-image card-image-profile" style="padding: 3px;border: 1px solid #B3ACA1;">
         {% if profile.photoId %}
-            <img src="{{ profile.photoId | cloudinary_url({'crop':'fill', 'width':400, 'height':400}) }}">
+            <img id="profile-image" src="{{ profile.photoId | cloudinary_url({'crop':'fill', 'width':400, 'height':400}) }}">
         {% else %}
-            <img src="{{ asset('bundles/dashboard/images/profile-icon.png') }}">
+            <img id="profile-image" src="{{ asset('bundles/dashboard/images/profile-icon.png') }}">
         {% endif %}
     </div>
     <div class="progress hide" style="height: 3px;margin-top: 0px;margin-bottom: 0px;">
         <div class="indeterminate"></div>
     </div>
-    <div class="file-field input-field pmop-edit" style=" margin-top: 0px !important;padding: 0px;">
-        <div class="btn" style="background-color: transparent;width: 100%;">
-            <span><i class="mdi mdi-image-photo-camera left"></i> Update Picture</span>
+    <div class="file-field input-field pmop-edit" style=" margin-top: 0px !important;">
+        <a id="btn-update" class="btn btn-small " style="background-color: transparent;width: 100%;height: 25.2px;line-height: 25px;font-size:10px;padding-left: 15px;padding-right: 15px;box-shadow: 0 0px 0px rgba(0,0,0,.26)!important;">
+            <span><i class="mdi mdi-image-photo-camera left" style="margin-right: 0px"></i> Update picture</span>
             <input name="file" class="cloudinary-fileupload" type="file">
-        </div>
+        </a>
     </div>
 
     {{ form_start(picture_form, {'action': path('profile_upload_picture'), 'method': 'POST', 'id':'profile_picture_form'}) }}
