--- a/src/DashboardBundle/Resources/views/Upgrade/Partials/_stripe_card_form.html.twig
+++ b/src/DashboardBundle/Resources/views/Upgrade/Partials/_stripe_card_form.html.twig
@@ -27,7 +27,7 @@
         <div class="col s4 md4">
             <label>
                 <h5>Expiration Date</h5>
-                <select data-stripe="exp-month" required>
+                <select data-stripe="exp-month" required class="browser-default">
                     {% for month in ["01", "02", "03", "04", "05", "06", "07", "08", "09", "10", "11", "12"] %}
                         <option {{ loop.index == 1 ? 'selected' }} value="{{ month }}">{{ month }}</option>
                     {% endfor %}
@@ -37,7 +37,7 @@
         <div class="col s4 md4">
             <label>
                 <h5>&nbsp;</h5>
-                <select data-stripe="exp-year" required>
+                <select data-stripe="exp-year" required class="browser-default">
                     <option disabled selected>YYYY</option>
                     {% for year in [0, 1, 2, 3, 4, 5] %}
                         {% set year_show = "now"|date("Y") + year %}
