--- a/src/DashboardBundle/Resources/views/Properties/show.html.twig
+++ b/src/DashboardBundle/Resources/views/Properties/show.html.twig
@@ -19,20 +19,64 @@
 			<div class="col m8">
 
 				<div class="row" style="margin-top: 0px">
-					<div class="col m12">
-						<div class="carousel carousel-slider" style="height: 375px;">
+					<div class="col m12"">
+						<div class="carousel carousel-slider" style="height: 426px;">
 							<a class="carousel-item" href="#one!"><img src="{{ asset('bundles/dashboard/properties/1.jpg') }}"></a>
 							<a class="carousel-item" href="#one!"><img src="{{ asset('bundles/dashboard/properties/2.jpg') }}"></a>
 							<a class="carousel-item" href="#one!"><img src="{{ asset('bundles/dashboard/properties/3.jpg') }}"></a>
 						</div>
 					</div>
-				</div>
-				<div class="row">
-					<div class="col m4">
+					<div class="controls-slider" style="position: relative;top: -62px;height: 20px;">
 						<a id="p" class="btn"><i class="mdi-hardware-keyboard-arrow-left" style="font-size: 24px"></i></a>
 						<a id="f" class="btn"><i class="mdi-hardware-keyboard-arrow-right" style="font-size: 24px"></i></a>
 					</div>
-					<div class="col m8">
+				</div>
+				{#<div class="row" style="position: relative;top: -62px;">#}
+					{#<div class="col m4">#}
+						{#<a id="p" class="btn"><i class="mdi-hardware-keyboard-arrow-left" style="font-size: 24px"></i></a>#}
+						{#<a id="f" class="btn"><i class="mdi-hardware-keyboard-arrow-right" style="font-size: 24px"></i></a>#}
+					{#</div>#}
+					{#<div class="col m8">#}
+					{#</div>#}
+				{#</div>#}
+				<div class="row" style="margin-top: 0px;">
+					<div class="col m12">
+						<div class="card">
+							<div class="title">
+								<h5> Amenities </h5>
+							</div>
+							<div class="content" style="padding: 15px;">
+								Lorem Ipsum es simplemente el texto de relleno de las imprentas y archivos de texto.
+								Lorem Ipsum ha sido el texto de relleno estándar de las industrias desde el año 1500,
+								cuando un impresor (N. del T. persona que se dedica a la imprenta) desconocido usó una
+								galería de textos y los mezcló de tal manera que logró hacer un libro de textos especimen.
+								No sólo sobrevivió 500 años, sino que tambien ingresó como texto de relleno en documentos
+								electrónicos, quedando esencialmente igual al original. Fue popularizado en los 60s con la
+								creación de las hojas "Letraset", las cuales contenian pasajes de Lorem Ipsum, y más
+								recientemente con software de autoedición, como por ejemplo Aldus PageMaker, el cual
+								incluye versiones de Lorem Ipsum.
+							</div>
+						</div>
+					</div>
+				</div>
+				<div class="row">
+					<div class="col m12">
+						<div class="card">
+							<div class="title">
+								<h5> Features </h5>
+							</div>
+							<div class="content" style="padding: 15px;">
+								Lorem Ipsum es simplemente el texto de relleno de las imprentas y archivos de texto.
+								Lorem Ipsum ha sido el texto de relleno estándar de las industrias desde el año 1500,
+								cuando un impresor (N. del T. persona que se dedica a la imprenta) desconocido usó una
+								galería de textos y los mezcló de tal manera que logró hacer un libro de textos especimen.
+								No sólo sobrevivió 500 años, sino que tambien ingresó como texto de relleno en documentos
+								electrónicos, quedando esencialmente igual al original. Fue popularizado en los 60s con la
+								creación de las hojas "Letraset", las cuales contenian pasajes de Lorem Ipsum, y más
+								recientemente con software de autoedición, como por ejemplo Aldus PageMaker, el cual
+								incluye versiones de Lorem Ipsum.
+							</div>
+						</div>
 					</div>
 				</div>
 			</div>
@@ -45,50 +89,67 @@
 					</div>
 					<div class="content" style="padding: 15px;">
 						<section id="technicalData" class="row m-t list-data" style="margin-top: 0px">
-							<div class="col l4 m6 s6" style="padding-bottom: 0px">
-								<p class="m-none"><small class="latam-secondary-text text-lighten-2 truncate">Price</small>
-									<span class="truncate">2,344,666</span>
-								</p>
+							<div class="row" style="margin-top: 0px">
+								<div class="col l4 m6 s6" style="padding-bottom: 0px">
+									<p class="m-none">
+										<label style="font-size: 12px;">Price</label>
+										<span class="truncate" style="color:rgb(94, 94, 94);">2,344,666</span>
+									</p>
+								</div>
+								<div class="col l4 m6 s6" style="padding-bottom: 0px">
+									<p class="m-none">
+										<label style="font-size: 12px;">Rooms</label>
+										<span class="truncate" style="color:rgb(94, 94, 94);">2</span>
+									</p>
+								</div>
+								<div class="col l4 m6 s6" style="padding-bottom: 0px">
+									<p class="m-none">
+										<label style="font-size: 12px;">Baths</label>
+										<span class="truncate" style="color:rgb(94, 94, 94);">1</span>
+									</p>
+								</div>
 							</div>
-							<div class="col l4 m6 s6" style="padding-bottom: 0px">
-								<p class="m-none"><small class="latam-secondary-text text-lighten-2 truncate">Rooms</small>
-									<span class="truncate">2</span>
-								</p>
+
+							<div class="row" style="margin-top: 0px">
+								<div class="col l4 m6 s6" style="padding-bottom: 0px">
+									<p class="m-none">
+										<label style="font-size: 12px;">Parking</label>
+										<span class="truncate" style="color:rgb(94, 94, 94);">Yes</span>
+									</p>
+								</div>
+								<div class="col l4 m6 s6" style="padding-bottom: 0px">
+									<p class="m-none">
+										<label style="font-size: 12px;">Unit Size</label>
+										<span class="truncate" style="color:rgb(94, 94, 94);">28x90</span>
+									</p>
+								</div>
+								<div class="col l4 m6 s6" style="padding-bottom: 0px">
+									<p class="m-none">
+										<label>Year Built</label>
+										<span class="truncate" style="color:rgb(94, 94, 94);">2010</span>
+									</p>
+								</div>
 							</div>
-							<div class="col l4 m6 s6" style="padding-bottom: 0px">
-								<p class="m-none"><small class="latam-secondary-text text-lighten-2 truncate">Baths</small>
-									<span class="truncate">1</span>
-								</p>
-							</div>
-							<div class="col l4 m6 s6" style="padding-bottom: 0px">
-								<p class="m-none"><small class="latam-secondary-text text-lighten-2 truncate">Parking</small>
-									<span class="truncate">Yes</span>
-								</p>
-							</div>
-							<div class="col l4 m6 s6" style="padding-bottom: 0px">
-								<p class="m-none"><small class="latam-secondary-text text-lighten-2 truncate">Unit Size</small>
-									<span class="truncate">28x90</span>
-								</p>
-							</div>
-							<div class="col l4 m6 s6" style="padding-bottom: 0px">
-								<p class="m-none"><small class="latam-secondary-text text-lighten-2 truncate">Year Built</small>
-									<span class="truncate">2010</span>
-								</p>
-							</div>
-							<div class="col l4 m6 s6">
-								<p class="m-none"><small class="latam-secondary-text text-lighten-2 truncate">Lease Term</small>
-									<span class="truncate">3344</span>
-								</p>
-							</div>
-							<div class="col l4 m6 s6">
-								<p class="m-none"><small class="latam-secondary-text text-lighten-2 truncate">Is for rent?</small>
-									<span class="truncate">Yes</span>
-								</p>
-							</div>
-							<div class="col l4 m6 s6">
-								<p class="m-none"><small class="latam-secondary-text text-lighten-2 truncate">IUnit type</small>
-									<span class="truncate">House</span>
-								</p>
+
+							<div class="row" style="margin-top: 0px">
+								<div class="col l4 m6 s6">
+									<p class="m-none">
+										<label style="font-size: 12px;">Lease Term</label>
+										<span class="truncate" style="color:rgb(94, 94, 94);">3344</span>
+									</p>
+								</div>
+								<div class="col l4 m6 s6">
+									<p class="m-none">
+										<label style="font-size: 12px;">Is for rent?</label>
+										<span class="truncate" style="color:rgb(94, 94, 94);">Yes</span>
+									</p>
+								</div>
+								<div class="col l4 m6 s6">
+									<p class="m-none">
+										<label style="font-size: 12px;">Unit type</label>
+										<span class="truncate" style="color:rgb(94, 94, 94);">House</span>
+									</p>
+								</div>
 							</div>
 						</section>
 					</div>
@@ -101,38 +162,41 @@
 					<div class="content" style="padding: 15px;">
 						<section id="technicalData" class="row m-t list-data" style="margin-top: 0px">
 							<div class="col l4 m6 s6" style="padding-bottom: 0px">
-								<p class="m-none"><small class="latam-secondary-text text-lighten-2 truncate">Country</small>
-									<span class="truncate">United States</span>
+								<p class="m-none">
+									<label style="font-size: 12px;">Country</label>
+									<span class="truncate" style="color:rgb(94, 94, 94);">United States</span>
 								</p>
 							</div>
 							<div class="col l4 m6 s6" style="padding-bottom: 0px">
-								<p class="m-none"><small class="latam-secondary-text text-lighten-2 truncate">State</small>
-									<span class="truncate">Texas</span>
+								<p class="m-none">
+									<label style="font-size: 12px;">State</label>
+									<span class="truncate" style="color:rgb(94, 94, 94);">Texas</span>
 								</p>
 							</div>
 							<div class="col l4 m6 s6" style="padding-bottom: 0px">
-								<p class="m-none"><small class="latam-secondary-text text-lighten-2 truncate">City</small>
-									<span class="truncate">Houston</span>
+								<p class="m-none">
+									<label style="font-size: 12px;">City</label>
+									<span class="truncate" style="color:rgb(94, 94, 94);">Houston</span>
 								</p>
 							</div>
 							<div class="col l8 m8 s6" style="padding-bottom: 0px">
-								<p class="m-none"><small class="latam-secondary-text text-lighten-2 truncate">Address</small>
-									<span class="truncate tooltipped"  data-position="top" data-delay="50" data-tooltip="74434 East Sweet Bottom Br #18393" style="cursor: pointer">74434 East Sweet Bottom Br #18393</span>
+								<p class="m-none">
+									<label style="font-size: 12px;">Address</label>
+									<span class="truncate tooltipped"  data-position="top" data-delay="50" data-tooltip="74434 East Sweet Bottom Br #18393" style="color:rgb(94, 94, 94);cursor: pointer">74434 East Sweet Bottom Br #18393</span>
 								</p>
 							</div>
 							<div class="col l4 m4 s6" style="padding-bottom: 0px">
-								<p class="m-none"><small class="latam-secondary-text text-lighten-2 truncate">Postal Code</small>
-									<span class="truncate">32767</span>
+								<p class="m-none">
+									<label style="font-size: 12px;">Postal Code</label>
+									<span class="truncate" style="color:rgb(94, 94, 94);">32767</span>
 								</p>
 							</div>
 							<div class="col l12 m12 s6">
 								<div id="map-canvas"></div>
 							</div>
-
 						</section>
 					</div>
 				</div>
-
 			</div>
 		</div>
 
