Improve Profile UI

--- a/app/Resources/FOSUserBundle/views/Security/login.html.twig
+++ b/app/Resources/FOSUserBundle/views/Security/login.html.twig
@@ -39,7 +39,7 @@
         </div>
         <div class="row" style="padding-bottom: 20px">
           <div class="col-sm-12">
-            If you not has account, please <a href="{{path('fos_user_registration_register')}}"> SIGN UP </a>.
+            If you not has account, please <a href="{{path('fos_user_registration_register')}}">SIGN UP</a>
           </div>
         </div>
 
