--- a/src/UserBundle/Resources/views/Profile/Partials/_index-tab-payment-option.html.twig
+++ b/src/UserBundle/Resources/views/Profile/Partials/_index-tab-payment-option.html.twig
@@ -1,9 +1,10 @@
-<div id="tab-billing-info" style="color: #5e5e5e;padding: 15px 15px 15px 15px">
+<div id="tab-billing-info" style="color: #5e5e5e;padding: 20px">
   <div class="row" style="margin-top: 3rem;">
-    <div class="col m6">
-      <div class="row">
-        <div class="col s3" style="padding-bottom: 10px;"> <span class="right"><b>Card Holder:</b></span></div>
-        <div class="col s9" style="padding-bottom: 10px;">
+    <div class="col m4">
+      <h5>Card Information</h5>
+      <div class="row" style="margin-top: 1em">
+        <div class="col s4" style="padding-bottom: 10px;"> <span class="left"><b>Card Holder:</b></span></div>
+        <div class="col s8" style="padding-bottom: 10px;">
           <span id="card_holder">
           {% if card_info %}
             {{ card_info.name }}
@@ -14,8 +15,8 @@
         </div>
       </div>
       <div class="row">
-        <div class="col s3" style="padding-bottom: 10px;"> <span class="right"><b>Stored Card:</b></span></div>
-        <div class="col s9" style="padding-bottom: 10px;">
+        <div class="col s4" style="padding-bottom: 10px;"> <span class="left"><b>Stored Card:</b></span></div>
+        <div class="col s8" style="padding-bottom: 10px;">
           <span id="card_ended">
           {% if card_info %}
             XXXX-XXXX-XXXX-{{ card_info.last4 }}
@@ -26,8 +27,8 @@
         </div>
       </div>
       <div class="row">
-        <div class="col s3" style="padding-bottom: 10px;"> <span class="right"><b>Card Type:</b></span></div>
-        <div class="col s9" style="padding-bottom: 10px;">
+        <div class="col s4" style="padding-bottom: 10px;"> <span class="left"><b>Card Type:</b></span></div>
+        <div class="col s8" style="padding-bottom: 10px;">
           <span>
           {% if card_info %}
             {{ card_info.brand }}
@@ -37,69 +38,72 @@
         </span>
         </div>
       </div>
+      <div class="row">
+        <a class="btn modal-trigger btn-small" id="stripe-show-card-modal"  href="#stripe-card-modal" style="margin-top: 1em">
+          <i class="fa fa-credit-card left"></i>
+          {% if card_info %}
+            Update Credit Card
+          {% else %}
+            Add Credit Card
+          {% endif %}
+        </a>
+      </div>
     </div>
-    <div class="col m6">
-      <a class="btn modal-trigger btn-small right" id="stripe-show-card-modal"  href="#stripe-card-modal">
-        <i class="fa fa-credit-card left"></i>
-        {% if card_info %}
-          Update Credit Card
-        {% else %}
-          Add Credit Card
-        {% endif %}
-      </a>
+    <div class="col m8">
+      <div class="col m12">
+        <h5>Payment History</h5>
+        <table class="table table-hover">
+          <thead>
+          <tr>
+            <th>
+              Plan
+            </th>
+            <th>
+              Date
+            </th>
+            <th>
+              Amount
+            </th>
+            <th>
+              Status
+            </th>
+          </tr>
+          </thead>
+          <tbody>
+          {% if invoices %}
+            {% for invoice in invoices %}
+              <tr>
+                <td>
+                  {% set line_first = invoice.lines.data | first %}
+                  {% set line_last = invoice.lines.data | last %}
+                  {{ line_last.plan.name }}
+                </td>
+                <td>
+                  {{ invoice.date | date('M Y') }}
+                </td>
+                <td>
+                  $ {{ (invoice.amount_due / 100) | number_format(2) }}
+                </td>
+                <td>
+                  {{ invoice.closed ? 'PAYD' : 'UNPAYD' }}
+                </td>
+              </tr>
+            {% endfor %}
+          {% else %}
+            <tr>
+              <td>
+                No invoices found
+              </td>
+            </tr>
+          {% endif %}
+          </tbody>
+        </table>
+      </div>
     </div>
   </div>
 
   <div class="row" style="margin-top: 3rem;">
-    <div class="col m12">
-      <h5>Payments History:</h5>
-      <table class="table table-hover">
-        <thead>
-        <tr>
-          <th>
-            Plan
-          </th>
-          <th>
-            Date
-          </th>
-          <th>
-            Amount
-          </th>
-          <th>
-            Status
-          </th>
-        </tr>
-        </thead>
-        <tbody>
-        {% if invoices %}
-          {% for invoice in invoices %}
-            <tr>
-              <td>
-                {% set line_first = invoice.lines.data | first %}
-                {% set line_last = invoice.lines.data | last %}
-                {{ line_last.plan.name }}
-              </td>
-              <td>
-                {{ invoice.date | date('M Y') }}
-              </td>
-              <td>
-                $ {{ (invoice.amount_due / 100) | number_format(2) }}
-              </td>
-              <td>
-                {{ invoice.closed ? 'PAYD' : 'UNPAYD' }}
-              </td>
-            </tr>
-          {% endfor %}
-        {% else %}
-          <tr>
-            <td>
-              No invoices found
-            </td>
-          </tr>
-        {% endif %}
-        </tbody>
-      </table>
-    </div>
+
   </div>
 </div>
 
