--- a/app/Resources/FOSUserBundle/views/Security/login.html.twig
+++ b/app/Resources/FOSUserBundle/views/Security/login.html.twig
@@ -29,7 +29,7 @@
                 </div> </div>
               <div class="col-sm-6">
                 <div class="form-group">
-                  <a href=""> Forgot password</a>
+                  <a href="{{ path('fos_user_resetting_request') }}"> Forgot password</a>
                 </div> </div>
             </div>
             <input type="hidden" name="_csrf_token" value="{{ csrf_token }}"/>
