AB-12 Add link to go to dashboard from bredcum home

--- a/src/DashboardBundle/Resources/views/Common/Partials/_backend-breadcrumb-body-top.html.twig
+++ b/src/DashboardBundle/Resources/views/Common/Partials/_backend-breadcrumb-body-top.html.twig
@@ -3,6 +3,6 @@
     <div class="col s12 m9 l10">
       <ul>
         <li>
-          <a href="http://html.nkdev.info/_con/ui-buttons.html#"><i class="fa fa-home"></i> Home</a>
+          <a href="{{ path('dashboard_index') }}"><i class="fa fa-home"></i> Home</a>
           <i class="mdi-navigation-chevron-right"></i>
         </li>
