AB-13 Remove "create by" in the footer bar

--- a/src/DashboardBundle/Resources/views/Common/Partials/_backend-footer.html.twig
+++ b/src/DashboardBundle/Resources/views/Common/Partials/_backend-footer.html.twig
@@ -1,5 +1,5 @@
 
 <footer>
   <strong>COPYRIGHT</strong> © 2015 - 2016. All rights reserved. | <a target="_blank" href="http://agentsbud.com">AgentsBud</a>
-  <div class="right"><b>  Create by </b> <img height="20" src="{{ asset('bundles/common/images/logo-left.png') }}" alt="LOGO" style="position: relative;top: 7px;margin-left: 5px;"></div>
+  <div class="right"><img height="20" src="{{ asset('bundles/common/images/logo-left.png') }}" alt="LOGO" style="position: relative;top: 7px;margin-left: 5px;"></div>
 </footer>
